# MMCP

./: .gitignore  CMakeLists.txt  README.md
lib/: leetcode.cpp
src/: main.cpp
